Fix Avatar.types, Avatar.sizes and it's usages

--- a/src/components/AvatarGroup/__stories__/AvatarGroup.stories.mdx
+++ b/src/components/AvatarGroup/__stories__/AvatarGroup.stories.mdx
@@ -12,7 +12,6 @@ import Flex from "../../Flex/Flex";
 import Slider from "../../Slider/Slider";
 import Divider from "../../Divider/Divider";
 import Tooltip from "../../Tooltip/Tooltip";
-import { AvatarSize, AvatarType } from "../../Avatar/AvatarConstants";
 import styles from "./AvatarGroup.stories.module.scss";
 
 export const metaSettings = createStoryMetaSettings({
@@ -44,20 +43,20 @@ Use this component if you need to stack avatars as a group.
 
 <Canvas>
   <Story name="Overview">
-    <AvatarGroup size={AvatarSize.LARGE} max={3}>
-      <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-      <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-      <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
-      <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-      <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-      <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
-      <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-      <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-      <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
-      <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-      <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-      <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
-      <Avatar type={AvatarType.TEXT} text="MR" ariaLabel="Mark Roytstein" />
+    <AvatarGroup size={Avatar.sizes.LARGE} max={3}>
+      <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+      <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+      <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+      <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+      <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+      <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+      <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+      <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+      <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+      <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+      <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+      <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+      <Avatar type={Avatar.types.TEXT} text="MR" ariaLabel="Mark Roytstein" />
     </AvatarGroup>
   </Story>
 </Canvas>
@@ -91,33 +90,33 @@ As an avatar, avatar groups appear in 3 sizes: Small, Medium, and Large.
   <Story name="Size">
     <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.LARGE} align={Flex.align.START}>
       <StoryDescription description="Large" vertical align={Flex.align.START}>
-        <AvatarGroup size={AvatarSize.LARGE} type={AvatarType.IMG} max={3}>
-          <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-          <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
-          <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-          <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+        <AvatarGroup size={Avatar.sizes.LARGE} type={Avatar.types.IMG} max={3}>
+          <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+          <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+          <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
         </AvatarGroup>
       </StoryDescription>
       <StoryDescription description="Medium" vertical align={Flex.align.START}>
-        <AvatarGroup size={AvatarSize.MEDIUM} type={AvatarType.IMG} max={3}>
-          <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-          <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
-          <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-          <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+        <AvatarGroup size={Avatar.sizes.MEDIUM} type={Avatar.types.IMG} max={3}>
+          <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+          <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+          <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
         </AvatarGroup>
       </StoryDescription>
       <StoryDescription description="Small" vertical align={Flex.align.START}>
-        <AvatarGroup size={AvatarSize.SMALL} type={AvatarType.IMG} max={3}>
-          <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-          <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
-          <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-          <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+        <AvatarGroup size={Avatar.sizes.SMALL} type={Avatar.types.IMG} max={3}>
+          <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+          <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+          <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
         </AvatarGroup>
       </StoryDescription>
     </Flex>
@@ -133,32 +132,32 @@ You can use Light or Dark counter color to maintain visual hierarchy.
     <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.LARGE} align={Flex.align.START}>
       <StoryDescription description="Light" vertical align={Flex.align.START}>
         <AvatarGroup
-          size={AvatarSize.LARGE}
-          type={AvatarType.IMG}
+          size={Avatar.sizes.LARGE}
+          type={Avatar.types.IMG}
           max={3}
           counterProps={{ color: Counter.colors.LIGHT }}
         >
-          <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-          <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
-          <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-          <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+          <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+          <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
         </AvatarGroup>
       </StoryDescription>
       <StoryDescription description="Dark" vertical align={Flex.align.START}>
         <AvatarGroup
-          size={AvatarSize.LARGE}
-          type={AvatarType.IMG}
+          size={Avatar.sizes.LARGE}
+          type={Avatar.types.IMG}
           max={3}
           counterProps={{ color: Counter.colors.DARK }}
         >
-          <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-          <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
-          <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-          <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+          <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+          <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
         </AvatarGroup>
       </StoryDescription>
     </Flex>
@@ -172,8 +171,8 @@ You can pass `counterProps` to specify counter params.
 <Canvas>
   <Story name="Custom counter">
     <AvatarGroup
-      size={AvatarSize.LARGE}
-      type={AvatarType.IMG}
+      size={Avatar.sizes.LARGE}
+      type={Avatar.types.IMG}
       max={3}
       counterProps={{ count: 100500, color: Counter.colors.DARK, prefix: "", maxDigits: 5 }}
     >
@@ -190,7 +189,7 @@ When tooltip text for additional avatars is not passed, extra avatars will be di
 
 <Canvas>
   <Story name="Grid tooltip">
-    <AvatarGroup size={AvatarSize.LARGE} type={AvatarType.IMG} max={3}>
+    <AvatarGroup size={Avatar.sizes.LARGE} type={Avatar.types.IMG} max={3}>
       <Avatar src={person1} />
       <Avatar src={person2} />
       <Avatar src={person3} />
@@ -238,23 +237,23 @@ Choose the maximum amount of avatars you want to display.
             postfix="16"
             valueText={`${max}`}
           />
-          <AvatarGroup size={AvatarSize.LARGE} max={max}>
-            <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-            <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-            <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
-            <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-            <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-            <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
-            <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-            <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-            <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
-            <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-            <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-            <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
-            <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-            <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-            <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
-            <Avatar text="MR" type={AvatarType.TEXT} ariaLabel="Mark Roytstein" />
+          <AvatarGroup size={Avatar.sizes.LARGE} max={max}>
+            <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+            <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+            <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+            <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+            <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+            <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+            <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+            <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+            <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+            <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+            <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+            <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+            <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+            <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+            <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+            <Avatar text="MR" type={Avatar.types.TEXT} ariaLabel="Mark Roytstein" />
           </AvatarGroup>
         </Flex>
       );
@@ -275,9 +274,9 @@ Otherwise, avatars will be displayed in a Tooltip with no item's navigation.
         setLastClickedAvatarId(avatarId);
       }, []);
       const avatarsProps = [
-        { type: AvatarType.IMG, src: person1, ariaLabel: "Hadas Fahri" },
-        { type: AvatarType.IMG, src: person2, ariaLabel: "Sergey Roytman" },
-        { type: AvatarType.IMG, src: person3, ariaLabel: "Yonatan Lev Ari" }
+        { type: Avatar.types.IMG, src: person1, ariaLabel: "Hadas Fahri" },
+        { type: Avatar.types.IMG, src: person2, ariaLabel: "Sergey Roytman" },
+        { type: Avatar.types.IMG, src: person3, ariaLabel: "Yonatan Lev Ari" }
       ];
       const getDummyAvatarsProps = useCallback(multiplier => {
         let result = [];
@@ -290,7 +289,7 @@ Otherwise, avatars will be displayed in a Tooltip with no item's navigation.
         <Flex direction={Flex.directions.ROW} gap={Flex.gaps.LARGE}>
           <StoryDescription description="Counter hover" vertical align={Flex.align.START}>
             <AvatarGroup
-              size={AvatarSize.LARGE}
+              size={Avatar.sizes.LARGE}
               max={3}
               counterTooltipCustomProps={{ position: Tooltip.positions.BOTTOM }}
             >
@@ -301,7 +300,7 @@ Otherwise, avatars will be displayed in a Tooltip with no item's navigation.
           </StoryDescription>
           <StoryDescription description="Counter click" vertical align={Flex.align.START}>
             <Flex>
-              <AvatarGroup size={AvatarSize.LARGE} max={3}>
+              <AvatarGroup size={Avatar.sizes.LARGE} max={3}>
                 {getDummyAvatarsProps(4).map((avatarProps, index) => (
                   <Avatar {...avatarProps} onClick={avatarOnClick} id={`${index}`} />
                 ))}
@@ -323,9 +322,9 @@ Should be used only to display large amount of avatars in default counter toolti
   <Story name="Virtualized list">
     {() => {
       const avatars = [
-        <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />,
-        <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />,
-        <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+        <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />,
+        <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />,
+        <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
       ];
       const getDummyAvatars = multiplier => {
         let result = [];
@@ -335,7 +334,7 @@ Should be used only to display large amount of avatars in default counter toolti
         return result;
       };
       return (
-        <AvatarGroup size={AvatarSize.LARGE} max={3} counterTooltipIsVirtualizedList={true}>
+        <AvatarGroup size={Avatar.sizes.LARGE} max={3} counterTooltipIsVirtualizedList={true}>
           {getDummyAvatars(334)}
         </AvatarGroup>
       );
@@ -350,8 +349,8 @@ Counter tooltip props can be specified in order to render tooltip with custom co
 <Canvas>
   <Story name="Counter custom tooltip content">
     <AvatarGroup
-      size={AvatarSize.LARGE}
-      type={AvatarType.IMG}
+      size={Avatar.sizes.LARGE}
+      type={Avatar.types.IMG}
       max={3}
       counterTooltipCustomProps={{ content: "... and plenty more employees" }}
     >
@@ -373,13 +372,13 @@ Counter tooltip props can be specified in order to render tooltip with custom co
   <Story name="Last seen users">
     <Flex direction={Flex.directions.ROW} gap={Flex.gaps.MEDIUM}>
       <div>Last seen</div>
-      <AvatarGroup size={AvatarSize.MEDIUM} max={3}>
-        <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-        <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-        <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
-        <Avatar type={AvatarType.IMG} src={person1} ariaLabel="Hadas Fahri" />
-        <Avatar type={AvatarType.IMG} src={person2} ariaLabel="Sergey Roytman" />
-        <Avatar type={AvatarType.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+      <AvatarGroup size={Avatar.sizes.MEDIUM} max={3}>
+        <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+        <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+        <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+        <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
+        <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
+        <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
       </AvatarGroup>
     </Flex>
   </Story>
@@ -412,27 +411,27 @@ Counter tooltip props can be specified in order to render tooltip with custom co
         <tr>
           <td align="left">
             <Flex direction={Flex.directions.ROW} gap={Flex.gaps.SMALL}>
-              <Avatar type={AvatarType.IMG} src={person1} size={AvatarSize.MEDIUM} ariaLabel="Hadas Fahri" />
+              <Avatar type={Avatar.types.IMG} src={person1} size={Avatar.sizes.MEDIUM} ariaLabel="Hadas Fahri" />
               Hadas Fahri
             </Flex>
           </td>
           <td align="left">Developer</td>
           <td align="left">
-            <AvatarGroup size={AvatarSize.MEDIUM} max={2} counterProps={{ ariaLabelItemsName: "teams" }}>
+            <AvatarGroup size={Avatar.sizes.MEDIUM} max={2} counterProps={{ ariaLabelItemsName: "teams" }}>
               <Avatar
-                type={AvatarType.TEXT}
+                type={Avatar.types.TEXT}
                 text="T1"
                 backgroundColor={Avatar.backgroundColors.PEACH}
                 ariaLabel="Team 1"
               />
               <Avatar
-                type={AvatarType.TEXT}
+                type={Avatar.types.TEXT}
                 text="T2"
                 backgroundColor={Avatar.backgroundColors.BUBBLE}
                 ariaLabel="Team 2"
               />
               <Avatar
-                type={AvatarType.TEXT}
+                type={Avatar.types.TEXT}
                 text="T3"
                 backgroundColor={Avatar.backgroundColors.BERRY}
                 ariaLabel="Team 3"
