--- a/src/components/Tooltip/__stories__/tooltip.stories.mdx
+++ b/src/components/Tooltip/__stories__/tooltip.stories.mdx
@@ -56,7 +56,7 @@ Tooltips show contextual help or information about specific components when a us
 
 ## Props
 
-<ArgsTable of={Tooltip} />
+<ArgsTable story="Overview" />
 
 ## Usage
 
