--- a/src/components/AlertBanner/__stories__/alertBanner.stories.mdx
+++ b/src/components/AlertBanner/__stories__/alertBanner.stories.mdx
@@ -1,14 +1,14 @@
-import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
+import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import AlertBanner from "../AlertBanner";
 import AlertBannerText from "../AlertBannerText/AlertBannerText";
 import AlertBannerLink from "../AlertBannerLink/AlertBannerLink";
 import AlertBannerButton from "../AlertBannerButton/AlertBannerButton";
-import { Link } from "../../../storybook/components";
+import { ComponentRules, Link, RelatedComponents, UsageGuidelines } from "../../../storybook/components";
 import { createStoryMetaSettings } from "../../../storybook/functions/create-component-story";
 import {
-  TOOLTIP,
   ATTENTION_BOX,
-  TOAST
+  TOAST,
+  TOOLTIP
 } from "../../../storybook/components/related-components/component-description-map";
 import "./alertBanner.stories.scss";
 
@@ -67,7 +67,7 @@ Alert banners show pressing and high-signal messages, such as system alerts. The
 
 ## Props
 
-<ArgsTable of={AlertBanner} />
+<ArgsTable story="Overview" />
 
 ## Usage
 
