--- a/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
+++ b/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
@@ -1,9 +1,7 @@
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { useCallback } from "react";
 import AttentionBox from "../AttentionBox";
-import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook/functions/create-component-story";
-import { AttentionBoxType } from "../AttentionBoxConstants";
-import { Link } from "../../../storybook/components";
+import { createComponentTemplate, createStoryMetaSettings, Link } from "../../../storybook";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
 import { Info, Invite, ThumbsUp } from "../../Icon/Icons";
 import Icon from "../../Icon/Icon";
@@ -85,7 +83,7 @@ There are four types of attention boxes: Primary, success, danger, and dark (nat
         <AttentionBox
           title="You're doing great"
           text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
-          type={AttentionBoxType.SUCCESS}
+          type={AttentionBox.types.SUCCESS}
           className="monday-style-attention-box_box"
           icon={ThumbsUp}
         />
@@ -94,7 +92,7 @@ There are four types of attention boxes: Primary, success, danger, and dark (nat
         <AttentionBox
           title="Account low on free space"
           text="Your account if out of free space, free some space to prevent data loss."
-          type={AttentionBoxType.DANGER}
+          type={AttentionBox.types.DANGER}
           className="monday-style-attention-box_box"
         />
       </StoryDescription>
@@ -102,7 +100,7 @@ There are four types of attention boxes: Primary, success, danger, and dark (nat
         <AttentionBox
           title="What a great idea!"
           text="You can also make this list sortable by tagging the items with tags column"
-          type={AttentionBoxType.DARK}
+          type={AttentionBox.types.DARK}
           className="monday-style-attention-box_box"
           icon={Favorite}
         />
@@ -186,7 +184,7 @@ Provides additional information about an action or section.
         withIconWithoutHeader
         icon={Info}
         text="First, move the content you want to copy into folder. Only main boards and dashboards can be copied."
-        type={AttentionBoxType.DARK}
+        type={AttentionBox.types.DARK}
       />
     </div>
   </Story>
