--- a/src/components/BreadcrumbsBar/BreadcrumbItem/__stories__/breadcrumbItem.stories.mdx
+++ b/src/components/BreadcrumbsBar/BreadcrumbItem/__stories__/breadcrumbItem.stories.mdx
@@ -1,4 +1,4 @@
-import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
+import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import {
   createComponentTemplate,
   createStoryMetaSettings
@@ -11,40 +11,44 @@ import "./breadcrumbItem.stories.scss";
 export const metaSettings = createStoryMetaSettings({
   component: BreadcrumbItem,
   iconPropNamesArray: ["icon"]
-})
+});
 
 <Meta
   title="Navigation/BreadcrumbsBar/BreadcrumbItem"
-  component={ BreadcrumbItem }
-  argTypes={ metaSettings.argTypes }
-  decorators={ metaSettings.decorators }
+  component={BreadcrumbItem}
+  argTypes={metaSettings.argTypes}
+  decorators={metaSettings.decorators}
 />
 
 <!--- Component template -->
 
-export const breadcrumbItemTemplate = createComponentTemplate(BreadcrumbItem)
+export const breadcrumbItemTemplate = createComponentTemplate(BreadcrumbItem);
 
 <!--- Component documentation -->
 
 # BreadcrumbItem
+
 - [Overview](#overview)
 - [Props](#props)
 - [Variants](#variants)
 - [Feedback](#feedback)
 
 ## Overview
+
 <Canvas>
-  <Story name="Overview"
-         args={ { text: "Workspace", icon: Workspace } }>
-    { breadcrumbItemTemplate.bind({}) }
+  <Story name="Overview" args={{ text: "Workspace", icon: Workspace }}>
+    {breadcrumbItemTemplate.bind({})}
   </Story>
 </Canvas>
 
 ## Props
-<ArgsTable of={ BreadcrumbItem } />
+
+<ArgsTable story="Overview" />
 
 ## Variants
+
 ### States
+
 <Canvas>
   <Story name="States">
     <div className="monday-storybook-breadcrumb-item_column-wrapper">
@@ -83,6 +87,7 @@ export const breadcrumbItemTemplate = createComponentTemplate(BreadcrumbItem)
 </Canvas>
 
 ### With icon
+
 <Canvas>
   <Story name="With icon">
     <div className="monday-storybook-breadcrumb-item_column-wrapper">
@@ -95,7 +100,7 @@ export const breadcrumbItemTemplate = createComponentTemplate(BreadcrumbItem)
       <div className="monday-storybook-breadcrumb-item_row-wrapper">
         <span>Without Icon</span>
         <BreadcrumbsBar>
-        <BreadcrumbItem text="Workspace" />
+          <BreadcrumbItem text="Workspace" />
         </BreadcrumbsBar>
       </div>
     </div>
