--- a/src/components/BreadcrumbsBar/__stories__/breadcrumbsBar.stories.mdx
+++ b/src/components/BreadcrumbsBar/__stories__/breadcrumbsBar.stories.mdx
@@ -1,12 +1,12 @@
-import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
+import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import BreadcrumbsBar from "../BreadcrumbsBar";
-import BreadcrumbItem from "../BreadcrumbItem/BreadcrumbItem.jsx"
-import Avatar from "../../Avatar/Avatar"
+import BreadcrumbItem from "../BreadcrumbItem/BreadcrumbItem.tsx";
+import Avatar from "../../Avatar/Avatar";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
-import { Workspace, Folder, Board, Group } from "../../Icon/Icons";
+import { Board, Folder, Group, Workspace } from "../../Icon/Icons";
 import person3 from "./assets/person3.png";
 import { Link } from "../../../storybook/components";
-import { BUTTON_GROUP, WIZARD, TABS } from "../../../storybook/components/related-components/component-description-map";
+import { BUTTON_GROUP, TABS, WIZARD } from "../../../storybook/components/related-components/component-description-map";
 import { createStoryMetaSettings } from "../../../storybook/functions/create-component-story";
 import "./breadcrumbsBar.stories.scss";
 
