BreadcrumbsBar: TS-migration

--- a/src/components/BreadcrumbsBar/__stories__/breadcrumbsBar.stories.mdx
+++ b/src/components/BreadcrumbsBar/__stories__/breadcrumbsBar.stories.mdx
@@ -56,7 +56,7 @@ Breadcrumbs allow users to keep track and maintain awareness of their location a
 </Canvas>
 
 ## Props
-<ArgsTable of={ BreadcrumbsBar } />
+<ArgsTable story="Overview" />
 
 ## Usage
 <UsageGuidelines guidelines={[
