--- a/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.mdx
+++ b/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.mdx
@@ -12,7 +12,7 @@ import {
   STEPPER
 } from "../../../../storybook/components/related-components/component-description-map";
 import { Link } from "../../../../storybook/components";
-import BreadcrumbsBar from "../../../BreadcrumbsBar/BreadcrumbsBar.jsx";
+import BreadcrumbsBar from "../../../BreadcrumbsBar/BreadcrumbsBar.tsx";
 import BreadcrumbItem from "../../../BreadcrumbsBar/BreadcrumbItem/BreadcrumbItem.tsx";
 import "./linearProgressBar.stories.scss";
 
