refactor(ButtonGroup): migrate ButtonGroup to TypeScript
- Migrated ButtonGroup,  ButtonGroupConstants & ButtonWrapper to TypeScript
- Migrated buttonGroup-snapshot-tests and buttonGroup-tests to TypeScript
- Refactor buttonGroup stories as per docs

Closes #922

--- a/src/components/ButtonGroup/__stories__/buttonGroup.stories.mdx
+++ b/src/components/ButtonGroup/__stories__/buttonGroup.stories.mdx
@@ -59,7 +59,7 @@ Button group can be used to group related options. To emphasize groups of relate
 
 ## Props
 
-<ArgsTable of={ButtonGroup} />
+<ArgsTable story={"Overview"} />
 
 ## Usage
 
