--- a/src/components/Tabs/__stories__/tabs.stories.mdx
+++ b/src/components/Tabs/__stories__/tabs.stories.mdx
@@ -3,13 +3,17 @@ import TabList from "../TabList/TabList.jsx";
 import TabPanel from "../TabPanel/TabPanel.jsx";
 import TabPanels from "../TabPanels/TabPanels.jsx";
 import TabsContext from "../TabsContext/TabsContext.jsx";
-import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
-import { Chart, Table, Calendar, NewTab, Gantt, Status, NavigationChevronDown } from "../../Icon/Icons";
+import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
+import { Calendar, Chart, Gantt, NavigationChevronDown, NewTab, Table } from "../../Icon/Icons";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
-import TextField from "../../TextField/TextField.jsx";
+import TextField from "../../TextField/TextField.tsx";
 import { Link } from "../../../storybook/components";
-import { BUTTON_GROUP, BREADCRUBMS, STEPPER } from "../../../storybook/components/related-components/component-description-map";
-import { tabsTemplate } from './tabs.overview.jsx'
+import {
+  BREADCRUBMS,
+  BUTTON_GROUP,
+  STEPPER
+} from "../../../storybook/components/related-components/component-description-map";
+import { tabsTemplate } from "./tabs.overview.jsx";
 import "./tabs.stories.scss";
 
 <Meta
