--- a/src/components/TextField/__stories__/TextField.stories.mdx
+++ b/src/components/TextField/__stories__/TextField.stories.mdx
@@ -1,9 +1,10 @@
-import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
+import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import TextField from "../TextField";
-import { TEXT_TYPES } from "../TextFieldConstants";
+import { TextFieldTextType } from "../TextFieldConstants";
 import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook/functions/create-component-story";
-import { Email, CloseSmall, Check } from "../../Icon/Icons";
-import { DROPDOWN, SEARCH, COMBOBOX } from "../../../storybook/components/related-components/component-description-map";
+import { Check, CloseSmall, Email } from "../../Icon/Icons";
+import { COMBOBOX, DROPDOWN, SEARCH } from "../../../storybook/components/related-components/component-description-map";
+import { ComponentRules, RelatedComponents, UsageGuidelines } from "../../../storybook";
 import "./TextField.stories.scss";
 
 export const metaSettings = createStoryMetaSettings({
@@ -46,7 +47,7 @@ An input field includes a label and a text field users can type text into. They 
 </Canvas>
 
 ## Props
-<ArgsTable of={ TextField } />
+<ArgsTable story="Overview" />
 
 ## Usage
 <UsageGuidelines guidelines={[
@@ -168,7 +169,7 @@ Users can insert text.
     <div className="monday-storybook-text-field_size">
       <TextField
         size={TextField.sizes.MEDIUM}
-        type={TEXT_TYPES.DATE}
+        type={TextFieldTextType.DATE}
       />
     </div>
   </Story>
@@ -180,7 +181,7 @@ Users can insert text.
     <div className="monday-storybook-text-field_size">
       <TextField
         size={TextField.sizes.MEDIUM}
-        type={TEXT_TYPES.DATE_TIME}
+        type={TextFieldTextType.DATE_TIME}
       />
     </div>
   </Story>
