--- a/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.mdx
+++ b/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.mdx
@@ -12,8 +12,8 @@ import {
   STEPPER
 } from "../../../../storybook/components/related-components/component-description-map";
 import { Link } from "../../../../storybook/components";
-import BreadcrumbsBar from "../../../BreadcrumbsBar/BreadcrumbsBar.tsx";
-import BreadcrumbItem from "../../../BreadcrumbsBar/BreadcrumbItem/BreadcrumbItem.tsx";
+import BreadcrumbItem from "../../../BreadcrumbsBar/BreadcrumbItem/BreadcrumbItem";
+import BreadcrumbsBar from "../../../BreadcrumbsBar/BreadcrumbsBar";
 import "./linearProgressBar.stories.scss";
 
 export const metaSettings = createStoryMetaSettings({
