--- a/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.mdx
+++ b/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.mdx
@@ -1,17 +1,19 @@
 import LinearProgressBar from "../LinearProgressBar";
 import { useMemo } from "react";
-import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
-import {
-  createStoryMetaSettings
-} from "../../../../storybook/functions/create-component-story";
+import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
+import { createStoryMetaSettings } from "../../../../storybook/functions/create-component-story";
 import colors from "../../../../constants/colors.json";
 import DialogContentContainer from "../../../DialogContentContainer/DialogContentContainer";
 import { Info } from "../../../Icon/Icons";
 import Icon from "../../../Icon/Icon";
-import { SPINNER, STEPPER, SKELETON } from "../../../../storybook/components/related-components/component-description-map";
+import {
+  SKELETON,
+  SPINNER,
+  STEPPER
+} from "../../../../storybook/components/related-components/component-description-map";
 import { Link } from "../../../../storybook/components";
-import BreadcrumbsBar from "../../../BreadcrumbsBar/BreadcrumbsBar.jsx";
-import BreadcrumbItem from "../../../BreadcrumbsBar/BreadcrumbItem/BreadcrumbItem.jsx";
+import BreadcrumbItem from "../../../BreadcrumbsBar/BreadcrumbItem/BreadcrumbItem";
+import BreadcrumbsBar from "../../../BreadcrumbsBar/BreadcrumbsBar";
 import "./linearProgressBar.stories.scss";
 
 export const metaSettings = createStoryMetaSettings({
