Tab: TS-migration

--- a/src/components/Tabs/TabList/__stories__/tab-list.stories.mdx
+++ b/src/components/Tabs/TabList/__stories__/tab-list.stories.mdx
@@ -1,60 +1,64 @@
-import TabList from "../../TabList/TabList.jsx";
+import TabList from "../TabList.tsx";
 import Tab from "../../Tab/Tab";
-import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
+import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import classes from "./tab-list.stories.module.scss";
 
-<Meta
-  title="Navigation/Tabs/TabList"
-  component={ TabList }
-/>
+<Meta title="Navigation/Tabs/TabList" component={TabList} />
 
 <!--- Component template -->
 
-export const tabListTemplate = (args) => (
+export const tabListTemplate = args => (
   <TabList {...args}>
     <Tab>First</Tab>
     <Tab>Second</Tab>
     <Tab>Third</Tab>
     <Tab disabled>Disabled</Tab>
-  </TabList>)
+  </TabList>
+);
 
 <!--- Component documentation -->
 
 # TabList
+
 - [Overview](#overview)
 - [Props](#props)
 - [Variants](#variants)
 - [Feedback](#feedback)
 
 ## Overview
+
 TabList is a container of all the tabs headers inside the tabs component
+
 <Canvas>
-  <Story name="Overview">
-    { tabListTemplate.bind({}) }
-  </Story>
+  <Story name="Overview">{tabListTemplate.bind({})}</Story>
 </Canvas>
 
 ## Props
-<ArgsTable of={ TabList } />
+
+<ArgsTable story="Overview" />
 
 ## Variants
+
 ### Default - compact tabs
+
 <Canvas>
   <Story name="Default">
-      <TabList>
-        <Tab>First</Tab>
-        <Tab>Second</Tab>
-        <Tab>Third</Tab>
-        <Tab disabled>Disabled</Tab>
-      </TabList>
+    <TabList>
+      <Tab>First</Tab>
+      <Tab>Second</Tab>
+      <Tab>Third</Tab>
+      <Tab disabled>Disabled</Tab>
+    </TabList>
   </Story>
 </Canvas>
 
 ### Stretched
+
 The width of the list is responsive to the screen's width.
+
 <Canvas>
   <Story name="Stretched">
-    <div style={{width: "100%"}}>
+    <div style={{ width: "100%" }}>
       <TabList tabType="stretched">
         <Tab>First</Tab>
         <Tab>Second</Tab>
@@ -66,6 +70,7 @@ The width of the list is responsive to the screen's width.
 </Canvas>
 
 ### Sizes
+
 <Canvas>
   <Story name="Sizes">
     <div className={classes.tabsSizesContainer}>
