--- a/src/components/Tabs/Tab/__stories__/tab.stories.mdx
+++ b/src/components/Tabs/Tab/__stories__/tab.stories.mdx
@@ -1,6 +1,5 @@
 import Tab from "../Tab";
-import TabList from "../../TabList/TabList.jsx";
-import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
+import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { createComponentTemplate } from "../../../../storybook/functions/create-component-story";
 import { Email } from "../../../Icon/Icons";
 
