--- a/src/components/Tabs/TabPanel/__stories__/tab-panel.stories.mdx
+++ b/src/components/Tabs/TabPanel/__stories__/tab-panel.stories.mdx
@@ -1,4 +1,4 @@
-import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
+import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { createComponentTemplate } from "../../../../storybook/functions/create-component-story";
 import TabPanel from "../TabPanel";
 
@@ -28,4 +28,4 @@ Tab panel contains the content of one tab in a Tabs component.
 </Canvas>
 
 ## Props
-<ArgsTable of={ TabPanel } />
+<ArgsTable story="Overview" />
