--- a/src/components/Tabs/TabPanels/__stories__/tab-panels.stories.mdx
+++ b/src/components/Tabs/TabPanels/__stories__/tab-panels.stories.mdx
@@ -1,4 +1,4 @@
-import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
+import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { createStoryMetaSettings } from "../../../../storybook/functions/create-component-story";
 import TabPanel from "../../TabPanel/TabPanel";
 import TabPanels from "../TabPanels";
@@ -41,4 +41,4 @@ The Tab Panels component contains all the content of all the Tabs component's ta
 </Canvas>
 
 ## Props
-<ArgsTable of={ TabPanels } />
+<ArgsTable story="Overview" />
