--- a/src/components/Combobox/__stories__/combobox.stories.mdx
+++ b/src/components/Combobox/__stories__/combobox.stories.mdx
@@ -5,7 +5,7 @@ import person2 from "./assets/person2.png";
 import person3 from "./assets/person3.png";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { defaultPlaySuite } from "../__tests__/combobox-interactions";
-import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer.jsx";
+import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
 import Button from "../../Button/Button";
 import Dialog from "../../Dialog/Dialog";
 import { Update, Time, Upgrade, ThumbsUp, Wand, Person } from "../../Icon/Icons";
